--- a/demo/index.html
+++ b/demo/index.html
@@ -1,52 +1,17 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>es6-react-component Script Include</title>
+        <title>Demo Script Include</title>
         <meta charset="utf-8">
-        <style type="text/css">
-            .no-fouc { display: none; }
-        </style>
-        <script type="text/javascript">
-            document.documentElement.className = 'no-fouc';
-        </script>
-        <!--global styles-->
-        <link rel="stylesheet" href="bootstrap.min.css">
     </head>
-    <body style="background-color:#e0e0e0;-webkit-font-smoothing: antialiased;">
-
-        <div class="container" id="eventedElement">
-         <h3 class="text-center">Evented Card Components</h3>
-         <div class="row">
-             <div id="div1" class="col-md-4 col-sm-6">
-                 Div 1
-             </div>
-             <div id="div2" class="col-md-4 col-sm-6">
-                 Div 2
-             </div>
-             <div id="div3" class="col-md-4 col-sm-6">
-                 Div 3
-             </div>
-         </div><!--/row-->
-        </div><!--/container-->
-
-        <div class="container" id="outsider">
-         <h3 class="text-center">Non-Evented Card Component</h3>
-         <div class="row">
-             <div id="div4" class="col-md-4 col-sm-6">
-                 Div 4
-             </div>
-         </div><!--/row-->
-        </div><!--/container-->
-
-        <hr/>
-        <span>
-            <p>This text and image are rendered to prove that component styling is strictly scoped to the component.</p>
-        </span>
-        <img src="images/avatar.png" class="img-circle" />
+    <body>
+        <div id="demo-target1"></div><br />
+        <div id="demo-target2"></div><br />
+        <div id="demo-target3"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.min.js"></script>
-        <script src="http://localhost:8080/webpack-dev-server.js"></script>
-        <script src="../build/dev.card-component.js"></script>
+        <script src="http://localhost:8081/webpack-dev-server.js"></script>
+        <script src="../build/dev.component-name.js"></script>
     </body>
 </html>
