refactor: Enhance demo and use Elements SDK.

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,13 @@
     <head>
         <title>Demo Script Include</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="elements.css">
     </head>
     <body>
-        <div id="demo-target1"></div><br />
-        <div id="demo-target2"></div><br />
+        <div id="demo-target1"></div>
+        <br />
+        <div id="demo-target2"></div>
+        <br />
         <div id="demo-target3"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.min.js"></script>
