refactor: Demo use of both eventing and direct API.

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Demo Script Include</title>
+        <title>Demo Component Archetype</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="elements.css">
     </head>
     <body>
+        <h2>This demo is styled using the Elements SDK.</h2>
+        <br />
         <div id="demo-target1"></div>
         <br />
         <div id="demo-target2"></div>
@@ -15,6 +17,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.min.js"></script>
         <script src="http://localhost:8081/webpack-dev-server.js"></script>
+        <script src="polyfill-customevent.js"></script>
         <script src="../build/dev.component-name.js"></script>
     </body>
 </html>
