docs: Update README.

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Demo Component Archetype</title>
+        <title>Demo</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="elements.css">
     </head>
