--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,8 @@
         <br />
         <div id="demo-target2"></div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
         <script src="http://localhost:8081/webpack-dev-server.js"></script>
         <script src="polyfill-customevent.js"></script>
         <script src="../build/dev.component-name.js"></script>
