refactor: Remove polyfill file in favor of polyfill service request. Enhance READMEs.

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,10 +12,13 @@
         <br />
         <div id="demo-target2"></div>
 
+        <!-- External dependencies for React, polyfills -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
+        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent&gated=1"></script>
+        <!-- Locally hosted demo server -->
         <script src="http://localhost:8081/webpack-dev-server.js"></script>
-        <script src="polyfill-customevent.js"></script>
+        <!-- Demo build of component -->
         <script src="../build/dev.component-name.js"></script>
     </body>
 </html>
