--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,8 @@
         <!-- External dependencies for React, polyfills -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
-        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent&gated=1"></script>
+        <!-- CustomEvent polyfill is for IE, Intl.js polyfill is for Safari -->
+        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent,Intl.~locale.en,Intl.~locale.fr"></script>
         <!-- Locally hosted demo server -->
         <script src="http://localhost:8081/webpack-dev-server.js"></script>
         <!-- Demo build of component -->
