--- a/demo/index.html
+++ b/demo/index.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" type="text/css" href="elements.css">
     </head>
     <body>
-        <h2>This demo is styled using the Elements SDK.</h2>
+        <h2>This demo is styled using the Elements SDK</h2>
         <br />
         <div id="demo-target1"></div>
         <br />
         <div id="demo-target2"></div>
 
-        <!-- External dependencies for React, polyfills -->
+        <!-- External dependencies for React -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
         <!-- CustomEvent polyfill is for IE, Intl.js polyfill is for Safari -->
