fix: Enable source maps for webpack dev server.

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="elements.css">
     </head>
     <body>
-        <h2>This demo is styled using the Elements SDK</h2>
+        <h2>Demo styled using the Elements SDK</h2>
         <br />
         <div id="demo-target1"></div>
         <br />
