--- a/demo/index.html
+++ b/demo/index.html
@@ -1,25 +1,27 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Demo</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="elements.css">
-    </head>
-    <body>
-        <h2>Demo styled using the Elements SDK</h2>
-        <br />
-        <div id="demo-target1"></div>
-        <br />
-        <div id="demo-target2"></div>
+<head>
+    <title>Demo</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="elements.css">
+</head>
+<body>
+    <!-- Customize the demo for your component -->
+    <h1>Component Archetype Demo</h1>
+    <p>Styled using the Elements SDK.</p>
+    <br />
+    <div id="demo-target1"></div>
+    <br />
+    <div id="demo-target2"></div>
 
-        <!-- External dependencies for React -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
-        <!-- CustomEvent polyfill is for IE, Intl.js polyfill is for Safari -->
-        <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent,Intl.~locale.en,Intl.~locale.fr"></script>
-        <!-- Locally hosted demo server -->
-        <script src="http://localhost:8081/webpack-dev-server.js"></script>
-        <!-- Demo build of component -->
-        <script src="../build/dev.component-name.js"></script>
-    </body>
+    <!-- External dependencies for React -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
+    <!-- CustomEvent polyfill is for IE, Intl.js polyfill is for Safari -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent,Intl.~locale.en,Intl.~locale.fr"></script>
+    <!-- Locally hosted demo server -->
+    <script src="http://localhost:8081/webpack-dev-server.js"></script>
+    <!-- Demo build of component -->
+    <script src="../build/dev.component-name.js"></script>
+</body>
 </html>
