--- a/demo/index.html
+++ b/demo/index.html
@@ -7,12 +7,9 @@
 </head>
 <body>
     <!-- Customize the demo for your component -->
-    <h1>Component Archetype Demo</h1>
-    <p>Styled using the Elements SDK.</p>
+    <h1>Modal Demo</h1>
     <br />
     <div id="demo-target1"></div>
-    <br />
-    <div id="demo-target2"></div>
 
     <!-- External dependencies for React -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
