fix:forgot to remove .git file when developing modalresetting to last commit b216d1b23d10ac0c05f10d1f83995d64297b1035

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <!-- Customize the demo for your component -->
-    <h1>Modal Demo</h1>
+    <h1>Component Archetype Demo</h1>
+    <p>Styled using the Elements SDK.</p>
     <br />
     <div id="demo-target1"></div>
+    <br />
+    <div id="demo-target2"></div>
 
     <!-- External dependencies for React -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
