--- a/demo/index.html
+++ b/demo/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>TextModal Demo</title>
+    <title>Demo</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="elements.css">
 </head>
 <body>
-
-    <h1>TextModal Demo</h1>
+    <!-- Customize the demo for your component -->
+    <h1>Component Archetype Demo</h1>
     <p>Styled using the Elements SDK.</p>
     <br />
-    <div id="app"></div>
+    <div id="demo-target1"></div>
+    <br />
+    <div id="demo-target2"></div>
 
     <!-- External dependencies for React -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
