--- a/demo/index.html
+++ b/demo/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Demo</title>
+    <title>Alerts Demo</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="elements.css">
 </head>
 <body>
     <!-- Customize the demo for your component -->
-    <h1>Component Archetype Demo</h1>
+    <h1>Alerts Demo</h1>
     <p>Styled using the Elements SDK.</p>
     <br />
     <div id="demo-target1"></div>
