fix: Icons rendering to the alert

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,6 @@
     <title>Alerts Demo</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="elements.css">
-
 </head>
 <body>
     <!-- Customize the demo for your component -->
@@ -17,7 +16,7 @@
     <script>
       if (document.body.children[0].nodeName != 'svg') {
         var pe_ajax = new XMLHttpRequest();
-        pe_ajax.open("GET", "/icons/p-icons-sprite-1.1.svg", true);
+        pe_ajax.open("GET", "../node_modules/pearson-elements/dist/icons/p-icons-sprite-1.1.svg", true);
         pe_ajax.responseType = "document";
         pe_ajax.onload = function(e) {
           document.body.insertBefore(
