chore: targetting componentDidUpdate for 2nd instance

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,10 @@
     <!-- Customize the demo for your component -->
     <h1>Alerts Demo</h1>
     <p>Styled using the Elements SDK.</p>
+    <h4>Instance 1</h4>
     <div id="demo-target1"></div>
+    <h4>Instance 2</h4>
+    <div id="demo-target2"></div>
 
     <script>
       if (document.body.children[0].nodeName != 'svg') {
