--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     <h4>Instance 1</h4>
     <div id="demo-target1"></div>
 
-    <button onclick="buttonHandler('succes')">Success Alert!</button>
+    <button onclick="buttonHandler('success')">Success Alert!</button>
     <br />
     <br />
     <button onclick="buttonHandler('error')">Error Alert!</button>
