--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,6 @@
     <div class="banner"><h1>Pearson Design Accelerator</h1></div>
     <div id="demo-target1"></div>
 
-
     <h1 class="target">Alerts Demo</h1>
     <p class="target">Styled using the Elements SDK.</p>
 
@@ -52,12 +51,8 @@
       <br />
       <br />
       <br />
-      <br />
       <button class="target pe-btn_cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
     </div>
-
-
-
 
     <script>
       function buttonHandler(type) {
@@ -75,7 +70,7 @@
 // @param alertType    <String> 'success' || 'error'
 // @param alertMessage <String> 'user specified string'
 // -----------------------------------------------------------------------------
-          if(type == 'success' || type == 'error') {
+          if(type === 'success' || type === 'error') {
             document.body.dispatchEvent(new CustomEvent('triggerAlert', {
                 "detail":{
                   "alertList":[{
@@ -86,17 +81,13 @@
             }));
           }
 
-          if(type == 'clear') {
+          if(type === 'clear') {
             document.body.dispatchEvent(new CustomEvent('clearAlert'));
           }
 // =============================================================================
         console.log(type + " alertTriggered!")
       }
     </script>
-
-
-
-
 
     <script>
       if (document.body.children[0].nodeName !== 'svg') {
