--- a/demo/index.html
+++ b/demo/index.html
@@ -53,7 +53,7 @@
       <br />
       <br />
       <br />
-      <button class="target pe-btn_cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
+      <button class="target pe-btn__cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
     </div>
 
 
