--- a/demo/index.html
+++ b/demo/index.html
@@ -44,10 +44,10 @@
     </div>
 
     <div class="buttonGroup">
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('success')">Success Alert</button>
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success Alert</button>
       <br />
       <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('error')">Error Alert</button>
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error Alert</button>
       <br />
       <br />
       <br />
@@ -62,17 +62,17 @@
 //
 // To trigger an alert...
 // - dispatch 'triggerAlert' event with valid type and message
-//   valid type is success or error... so far.
+//   valid type is Success or Error... so far.
 // - dispatch 'clearAlert' to clear the array of events
 //
 // ** Consumer must polyfill CustomEvent **
 // -----------------------------------------------------------------------------
 // @param detail       <Object> on event (ie. ref e.detail)
 // @param alertList    <Array>  array of event Objects (ie. [{},{},...])
-// @param alertType    <String> 'success' || 'error'
+// @param alertType    <String> 'Success' || 'Error'
 // @param alertMessage <String> 'user specified string'
 // -----------------------------------------------------------------------------
-          if(type === 'success' || type === 'error') {
+          if(type === 'Success' || type === 'Error') {
             document.body.dispatchEvent(new CustomEvent('triggerAlert', {
                 "detail":{
                   "alertList":[{
