--- a/demo/index.html
+++ b/demo/index.html
@@ -44,17 +44,22 @@
     </div>
 
     <div class="buttonGroup">
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success Alert</button>
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success</button>
       <br />
       <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error Alert</button>
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error</button>
+      <br />
+      <br />
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Warning')">Warning</button>
+      <br />
+      <br />
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Information')">Information</button>
       <br />
       <br />
       <br />
       <br />
       <button class="target pe-btn__cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
     </div>
-
 
     <script>
       function buttonHandler(type) {
@@ -72,13 +77,14 @@
 // @param alertType    <String> 'Success' || 'Error'
 // @param alertMessage <String> 'user specified string'
 // -----------------------------------------------------------------------------
-          if(type === 'Success' || type === 'Error') {
+          if(type === 'Success' || type === 'Error' || type === 'Warning' || type === 'Information') {
             document.body.dispatchEvent(new CustomEvent('triggerAlert', {
                 "detail":{
                   "alertList":[{
                     "id"          : new Date().getTime(),
                     "alertType"   : type,
-                    "alertMessage": type + ' test message'
+                    "alertTitle"  : "Test",
+                    "alertMessage": type + ' message'
                   }]
                 }
             }));
