--- a/demo/index.html
+++ b/demo/index.html
@@ -36,7 +36,7 @@
       <h3>Alerts Event API</h3>
       <p>
         The Alerts Component works on an evented API.
-        Dispatch an event of 'triggerAlert' with the alertType
+        Dispatch an event of 'triggerAlert' with the alertType, alertTitle
         and alertMessage to display an alert.
         Dispatch an event of 'clearAlert' to delete all events from
         queue. Click the buttons on the left to dispatch an event.
@@ -47,10 +47,7 @@
       <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success</button>
       <br />
       <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error</button>
-      <br />
-      <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Warning')">Warning</button>
+      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error/Warning</button>
       <br />
       <br />
       <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Information')">Information</button>
@@ -74,17 +71,17 @@
 // -----------------------------------------------------------------------------
 // @param detail       <Object> on event (ie. ref e.detail)
 // @param alertList    <Array>  array of event Objects (ie. [{},{},...])
-// @param alertType    <String> 'Success' || 'Error'
+// @param alertType    <String> 'Success' || 'Error' || 'Information'
 // @param alertMessage <String> 'user specified string'
 // -----------------------------------------------------------------------------
-          if(type === 'Success' || type === 'Error' || type === 'Warning' || type === 'Information') {
+          if(type === 'Success' || type === 'Error' || type === 'Information') {
             document.body.dispatchEvent(new CustomEvent('triggerAlert', {
                 "detail":{
                   "alertList":[{
                     "id"          : new Date().getTime(),
                     "alertType"   : type,
                     "alertTitle"  : "Test",
-                    "alertMessage": type + ' message'
+                    "alertMessage": type + ' message. Adding more text to see it wrap!'
                   }]
                 }
             }));
