chore: minor style tweaks

--- a/demo/index.html
+++ b/demo/index.html
@@ -80,7 +80,7 @@
                   "alertList":[{
                     "id"          : new Date().getTime(),
                     "alertType"   : type,
-                    "alertTitle"  : "Test",
+                    "alertTitle"  : "Test title",
                     "alertMessage": type + ' message. Adding more text to see it wrap!'
                   }]
                 }
