chore: responsive styles

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,9 @@
       .buttonGroup {
         margin-top: 175px;
       }
+      h1 {
+        margin: 0;
+      }
     </style>
 </head>
 <body>
@@ -81,7 +84,7 @@
                     "id"          : new Date().getTime(),
                     "alertType"   : type,
                     "alertTitle"  : "Test title",
-                    "alertMessage": type + ' message. Adding more text to see it wrap!'
+                    "alertMessage": type + ' message. Adding more text to see it wrap to the second line!'
                   }]
                 }
             }));
