--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Alerts Demo</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="elements.css" />
     <style>
       .banner {
