--- a/demo/index.html
+++ b/demo/index.html
@@ -5,62 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="elements.css" />
-    <style>
-      .banner {
-        width: 100%;
-        height: 50px;
-        text-align: center;
-        font-size: 40px;
-      }
-      .target {
-        margin-left: 20px;
-      }
-      .rightContent {
-        float: right;
-        width: 40%;
-        margin-right: 20px;
-      }
-      .buttonGroup {
-        margin-top: 175px;
-      }
-      h1 {
-        margin: 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
 <body>
+  <div class="banner"><h1>Pearson Design Accelerator</h1></div>
+  <div id="demo-target1"></div>
 
-    <div class="banner"><h1>Pearson Design Accelerator</h1></div>
-    <div id="demo-target1"></div>
+  <h1 class="target">Alerts demo</h1>
+  <p class="target">Styled using the Elements SDK.</p>
 
-    <h1 class="target">Alerts Demo</h1>
-    <p class="target">Styled using the Elements SDK.</p>
+  <div class="rightContent">
+    <h3>Alerts Event API</h3>
+    <p>
+      The Alerts Component works on an evented API.
+      Dispatch an event of 'triggerAlert' with the alertType, alertTitle
+      and alertMessage to display an alert.
+      Dispatch an event of 'clearAlert' to delete all events from
+      queue. Click the buttons on the left to dispatch an event.
+    </p>
+  </div>
 
-    <div class="rightContent">
-      <h3>Alerts Event API</h3>
-      <p>
-        The Alerts Component works on an evented API.
-        Dispatch an event of 'triggerAlert' with the alertType, alertTitle
-        and alertMessage to display an alert.
-        Dispatch an event of 'clearAlert' to delete all events from
-        queue. Click the buttons on the left to dispatch an event.
-      </p>
-    </div>
-
-    <div class="buttonGroup">
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success</button>
-      <br />
-      <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error/Warning</button>
-      <br />
-      <br />
-      <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Information')">Information</button>
-      <br />
-      <br />
-      <br />
-      <br />
-      <button class="target pe-btn__cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
-    </div>
+  <div class="buttonGroup">
+    <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Success')">Success</button>
+    <br />
+    <br />
+    <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Error')">Error/Warning</button>
+    <br />
+    <br />
+    <button class="target pe-btn__primary--btn_small" onclick="buttonHandler('Information')">Information</button>
+    <br />
+    <br />
+    <br />
+    <br />
+    <button class="target pe-btn__cta--btn_xlarge" onclick="buttonHandler('clear')">Clear Alert</button>
+  </div>
 
     <script>
       function buttonHandler(type) {
