--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
     <!-- CustomEvent polyfill is for IE, Intl.js polyfill is for Safari -->
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=CustomEvent,Intl.~locale.en,Intl.~locale.fr"></script>
     <!-- Demo build of component -->
-    <script src="/alerts/dev.alerts.js"></script>
+    <script type="text/javascript" src="/alerts/dev.alerts.js"></script>
+    <script type="text/javascript" src="/alerts/demo.js"></script>
+    <script type="text/javascript" src="/alerts/dist.alerts.js"></script>
 </body>
 </html>
